<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:padding="@dimen/recycler_view_main_item_padding">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_you_want_to_delete_the_item"
        android:textSize="@dimen/activity_item_details_text_size"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_item_details_marginTop">


        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textSize="@dimen/activity_item_details_text_size"
            android:layout_weight="1"
            android:textStyle="bold"
            android:layout_marginEnd="15dp"/>

        <Button
            android:id="@+id/btn_decline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textSize="@dimen/activity_item_details_text_size"
            android:layout_weight="1"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>